--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,24 +23,23 @@ html {
         // header menu layout with flex mobileFirst responsive 
         display: flex;
         // temporary
-        flex-direction: row;
-        flex-wrap: wrap;
-        flex-flow: row wrap;
-        justify-content: center;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: ;
+    
 
         //logobox 
         .logo {
           //temporary
           max-width: 100px;
-          height: 50px;
+          height: inherit;
           background-color: red;
         }
 
         .menu-navigation {
           // temperary
-          background-color: rgb(46, 41, 41);
-          display: flex;
-          flex-direction: row;
+          background-color: rgb(45, 190, 9);
+        
 
           .menu-list {
             display: flex;
@@ -64,12 +63,14 @@ html {
           // display: none;
           // temporary
           width: 100px;
-          height: 50px;
+          height: inherit;
           // height: fit-content;
           background-color: rgba(85, 73, 3, 0.795);
+          display: flex;
+          direction: row;
 
           .contact-text {
-            color: blue($color: #3001ff);
+            color: blue;
             background-color: rgb(0, 247, 255);
           }
         }
