--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,1 @@
-/* Error: Expected expression.
- *    ,
- * 28 |     align-items: ;
- *    |                  ^
- *    '
- *   styles\style.scss 28:18  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Expected expression.\a    \2577 \a 28 \2502      align-items: ;\d\a    \2502                   ^\a    \2575 \a   styles\\style.scss 28:18  root stylesheet";
-}
+*{margin:0;padding:0;text-decoration:none;border:0 none;list-style-type:none;box-sizing:border-box}html{height:100%;min-height:100%;direction:rtl}html body{background-color:#fff}html body header{max-width:100%;height:48px;background-color:#0ee7b1}html body header .header-menu{max-width:1296px;height:100px;display:flex;flex-flow:row wrap;justify-content:space-evenly;align-items:center;align-content:center}html body header .header-menu .logo{height:inherit;background-color:red;order:3;flex-grow:1;flex-shrink:2;flex-basis:content;align-self:center}html body header .header-menu .menu-navigation{background-color:#2dbe09;order:2;flex-grow:2;flex-shrink:1;flex-basis:content}html body header .header-menu .menu-navigation .menu-list{order:2;display:flex;flex-direction:row}html body header .header-menu .menu-navigation .menu-list .menu-item{background-color:#7fff00}html body header .header-menu .menu-navigation .menu-list .menu-item .menu-link{background-color:green}html body header .header-menu .menu-navigation .menu-list .menu-item .menu-text{background-color:#adff2f}html body header .header-menu .menu-contact{height:inherit;background-color:rgba(85,73,3,.795);display:flex;direction:row;order:1;flex-grow:1;flex-shrink:2;flex-basis:auto}html body header .header-menu .menu-contact .contact-text{color:blue;background-color:#00f7ff}
