--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,29 +19,43 @@ html {
       // need to change with grid
       .header-menu {
         max-width: 1296px;
-        height: 48px;
+        // temporary
+        // height: 48px;
+        height: 100px;
         // header menu layout with flex mobileFirst responsive 
         display: flex;
         // temporary
     flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: ;
-    
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    // flex items
 
         //logobox 
         .logo {
           //temporary
-          max-width: 100px;
+          // max-width: 100px;
           height: inherit;
           background-color: red;
+          /* flex order */
+          order: 3;
+          flex-grow: 1;
+          flex-shrink: 2;
+          flex-basis: content;
+          align-self: center;
         }
 
         .menu-navigation {
           // temperary
           background-color: rgb(45, 190, 9);
-        
-
+          /* flex item */
+          order: 2;
+          flex-grow: 2;
+          flex-shrink: 1;
+          flex-basis: content;
           .menu-list {
+            /* flex container menu list */
+          order: 2;
             display: flex;
             flex-direction: row;
             .menu-item {
@@ -62,12 +76,17 @@ html {
         .menu-contact {
           // display: none;
           // temporary
-          width: 100px;
+          // width: 100px;
           height: inherit;
           // height: fit-content;
           background-color: rgba(85, 73, 3, 0.795);
           display: flex;
           direction: row;
+          /* flex item */
+          order: 1;
+          flex-grow: 1;
+          flex-shrink: 2;
+          flex-basis: auto;
 
           .contact-text {
             color: blue;
