--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,216 @@
-*{margin:0;padding:0;text-decoration:none;border:0 none;list-style-type:none;box-sizing:border-box}html{height:100%;min-height:100%;direction:rtl}html body{background-color:#fff}html body header{max-width:100%;height:48px;background-color:#0ee7b1}html body header .header-menu{max-width:1296px;height:100px;display:flex;flex-flow:row wrap;justify-content:space-evenly;align-items:center;align-content:center}html body header .header-menu .logo{height:inherit;background-color:red;order:3;flex-grow:1;flex-shrink:2;flex-basis:content;align-self:center}html body header .header-menu .menu-navigation{background-color:#2dbe09;order:2;flex-grow:2;flex-shrink:1;flex-basis:content}html body header .header-menu .menu-navigation .menu-list{order:2;display:flex;flex-direction:row}html body header .header-menu .menu-navigation .menu-list .menu-item{background-color:#7fff00}html body header .header-menu .menu-navigation .menu-list .menu-item .menu-link{background-color:green}html body header .header-menu .menu-navigation .menu-list .menu-item .menu-text{background-color:#adff2f}html body header .header-menu .menu-contact{height:inherit;background-color:rgba(85,73,3,.795);display:flex;direction:row;order:1;flex-grow:1;flex-shrink:2;flex-basis:auto}html body header .header-menu .menu-contact .contact-text{color:blue;background-color:#00f7ff}
+/* trunk-ignore-all(prettier) */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  border: 0 none;
+  list-style-type: none;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  min-height: 100%;
+  direction: rtl;
+}
+
+html body {
+  background-color: white;
+}
+
+html body header {
+  max-width: 100%;
+  height: 48px;
+  background-color: #0ee7b1;
+}
+
+html body {
+  font-family: Arial, Helvetica, sans-serif;
+  direction: ltr;
+  /* my wave header use position just form lay out */
+}
+html body header .header-menu {
+  max-width: 1296px;
+  height: 48px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+html body header .header-menu .menu-contact {
+  max-width: 152px;
+  height: inherit;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: rgba(85, 73, 3, 0.795);
+  /* flex item */
+  order: 1;
+}
+html body header .header-menu .menu-contact .contact-text {
+  color: blue;
+  background-color: rgb(0, 247, 255);
+}
+html body header .header-menu .menu-navigation {
+  max-width: 429.84px;
+  height: inherit;
+  background-color: rgb(178, 190, 9);
+  /* flex item */
+  order: 2;
+}
+html body header .header-menu .menu-navigation .menu-list {
+  /* flex container for menu list */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+html body header .header-menu .menu-navigation .menu-list .menu-item {
+  background-color: rgb(200, 255, 0);
+}
+html body header .header-menu .menu-navigation .menu-list .menu-item .menu-link {
+  background-color: rgb(128, 94, 0);
+}
+html body header .header-menu .menu-navigation .menu-list .menu-item .menu-text {
+  background-color: greenyellow;
+}
+html body header .header-menu .logo {
+  max-width: 196px;
+  height: 40px;
+  background-color: red;
+  order: 3;
+}
+
+/*
+.frame {
+  display: flex;
+  width: 1295.84px;
+  height: 48px;
+  align-items: center;
+  gap: 259px;
+  position: relative;
+}
+
+.frame .logo {
+  position: relative;
+  width: 196px;
+  height: 40px;
+}
+
+.frame .navigation {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 4px;
+  position: relative;
+  flex: 0 0 auto;
+  border-radius: 50px;
+  border: 1px solid;
+  border-color: var(--white-10);
+}
+
+.frame .div {
+  align-items: flex-start;
+  display: inline-flex;
+  gap: 8px;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.frame .link {
+  position: relative;
+  width: 101.03px;
+  height: 40px;
+  background-color: var(--card-bg);
+  border-radius: 32px;
+}
+
+.frame .text-wrapper {
+  position: absolute;
+  width: 65px;
+  height: 24px;
+  top: 6px;
+  left: 18px;
+  font-family: "Inter-Medium", Helvetica;
+  font-weight: 500;
+  color: var(--gray);
+  font-size: 14px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 24px;
+  white-space: nowrap;
+}
+
+.frame .div-wrapper {
+  width: 101.03px;
+  border-radius: 32px;
+  position: relative;
+  height: 40px;
+}
+
+.frame .link-2 {
+  width: 101.03px;
+  position: relative;
+  height: 40px;
+}
+
+.frame .link-3 {
+  width: 94.75px;
+  position: relative;
+  height: 40px;
+}
+
+.frame .text-wrapper-2 {
+  position: absolute;
+  width: 59px;
+  height: 24px;
+  top: 6px;
+  left: 18px;
+  font-family: "Inter-Medium", Helvetica;
+  font-weight: 500;
+  color: var(--gray);
+  font-size: 14px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 24px;
+  white-space: nowrap;
+}
+
+.frame .div-2 {
+  align-items: center;
+  justify-content: center;
+  padding: 15px 30px;
+  background-color: #1e1e1e;
+  border-radius: 8px;
+  display: inline-flex;
+  gap: 8px;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.frame .div-nav-dot {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  background-color: #16b364;
+  border-radius: 3px;
+}
+
+.frame .text-wrapper-3 {
+  position: relative;
+  width: 78px;
+  margin-top: -1.00px;
+  font-family: "Inter-Medium", Helvetica;
+  font-weight: 500;
+  color: var(--primary);
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 18.2px;
+}
+*/
+
+/*# sourceMappingURL=style.css.map */
